<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.android.csilnmiit.ContactUsFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView9"
        android:layout_width="348dp"
        android:layout_height="39dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="47dp"
        android:text="@string/email_csi_lnm"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:layout_width="348dp"
        android:layout_height="38dp"
        android:text="@string/website"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginRight="16dp"
        android:id="@+id/textView10"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />
    <TextView
        android:layout_width="348dp"
        android:layout_height="32dp"
        android:text="@string/web_url"
        android:onClick="CSIWeb"
        android:textColor="@color/colorIndigo"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/textView4"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="-23dp"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />
    <TextView
        android:layout_width="348dp"
        android:layout_height="39dp"
        android:text="@string/csi_fb"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/textView7"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />
    <TextView
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:text="@string/visit_csi_lnmiit"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/textView8"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.048"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />
    <TextView
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:text="@string/fb_link"
        android:textSize="20sp"
        android:textColor="@color/colorIndigo"
        android:onClick="FBCSI"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:id="@+id/textView2"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="348dp"
        android:layout_height="34dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:onClick="mailToCSI"
        android:text="@string/csi_email"
        android:textColor="@color/colorIndigo"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

</android.support.constraint.ConstraintLayout>
